<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tblMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llTimerUpContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tblMain">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/timer_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTimerUpValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/_00_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:layout_marginEnd="@dimen/_32dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/teal_200"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpStart"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_48dp"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:text="@string/start" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/teal_700"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpPause"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/pause" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpResume"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/resume" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTimerUpStop"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="@dimen/_48dp"
                android:background="@android:color/transparent"
                android:text="@string/stop" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTimerUpWithLimitContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTimerUpContent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/timer_up_with_limit"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTimerUpWithLimitValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/_00_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/teal_200"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpWithLimitStart"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_48dp"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:text="@string/start" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/teal_700"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpWithLimitPause"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/pause" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpWithLimitResume"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/resume" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerUpWithLimitStop"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/stop" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTimerDownContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTimerUpWithLimitContent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/timer_down"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTimerDownValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/_00_08_00"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/teal_200"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerDownStart"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_48dp"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:text="@string/start" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/teal_700"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerDownPause"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/pause" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerDownResume"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/resume" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimerDownStop"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/_48dp"
                    android:background="@android:color/transparent"
                    android:text="@string/stop" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>